--- a/Favorite.css
+++ b/Favorite.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: #111;
+    background: #000000;
     color: #fff;
 }
 
@@ -21,9 +21,7 @@ body {
     border: none;
     cursor: pointer;
     position: sticky;
-    
 }
-
 .navbar nav a {
     margin: 0 10px;
     color: #ccc;
@@ -43,39 +41,37 @@ body {
 .search-input {
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px 16px;
+    border: 1px solid #302a2a;
     border-radius: 5px;
     width: 220px;
     font-size: 14px;
-    background: #1a1a1a ;
+    background: #1a1a1a;
     color: #ccc;
 }
+
+.cart-link {
+    color: #8c52ff;        
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+}
+
 .cart-link:hover {
     text-decoration: underline;
 }
+
 
 .logo {
     font-size: 22px;
     font-weight: bold;
 }
 
-/* BUTTONS */
-.btn {
-    font-weight: bold;
-    background: #272424;
+.btn{
+    background-color: #111;
     padding: 10px 30px;
-    border: none;
     color: #ffffff;
     border-radius: 5px;
     cursor: pointer;
-}
-.btn-login{
-    border: none;
-    cursor: pointer;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 14px 40px;
-    font-size: 20px;
-    background: #1a1a1a;
-    color: #ccc;
 }
 .main-bottom{
     display: flex;
@@ -90,55 +86,22 @@ body {
 .btn:hover {
     opacity: 0.8;
 }
-
-/* HERO SECTION */
-.hero {
+.Favorite-Movie{
+    justify-content: center;
+    align-items: center;
     display: flex;
-    padding: 50px 40px;
-    background: #181818;
-    gap: 40px;
 }
 
-.hero-left img {
-    cursor: pointer;
-    width: 260px;
-    border-radius: 10px;
+.content{
+    display: flex;
+    padding: 20px;
 }
-
-.hero-right h1 {
-    font-size: 45px;
-    margin: 10px 0;
-}
-
-.tags span {
-    margin-right: 10px;
-    color: #bbb;
-}
-
-.description {
-    margin: 20px 0;
-    line-height: 1.5;
-}
-
-.movie-info {
-    margin: 15px 0;
-    color: #f8f6f6;
-}
-
-.hero-buttons button {
-    margin-right: 10px;
-    color: white;
-}
-
-/* MOVIE GRID */
-.movie-section {
-    padding: 50px 40px;
-}
-
-.movie-grid {
-    display: grid;
+.movie-container {
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     gap: 20px;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .movie-card {
@@ -147,24 +110,34 @@ body {
     padding: 10px;
     border-radius: 10px;
     text-align: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    text-decoration: none;
 }
 
 .movie-card img {
-    width: 100%;
+    align-items: center;
+    width: 220px;
+    height: 250px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .movie-card h4 {
     color: aliceblue;
     margin-top: 10px;
+    font-size: 16px;
 }
 
-.show-more {
-    margin-top: 20px;
-    display: block;
-    width: 180px;
-    margin-left: auto;
-    margin-right: auto;
-    background: #e50914;
-    color: white;
+
+/* footer */
+.footer {
+  height: 60px;
+  background: #111;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #aaa;
+  margin-top: 10%;
 }
